update: icon spacing fix

--- a/packages/web-components/src/components/va-link/va-link.css
+++ b/packages/web-components/src/components/va-link/va-link.css
@@ -22,6 +22,10 @@
   font-weight: 700;
 }
 
+:host([icon-name])::part(icon) {
+  margin-right: 4px;
+}
+
 .link-icon--active {
   vertical-align: baseline;
   position: relative;
@@ -31,7 +35,7 @@
 .link-icon--left {
   margin-right: 4px;
   vertical-align: baseline;
-  position: relative;
+  position: relative; 
   top: 3px;
 }
 
